Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/SFDC_Plan_Resource_Association__c.object
<CustomObject>
    <description>Assigns specific resources to a channel plan. Align resources with objectives, and provide a clear picture to partners of who their channel support team is.</description>
    <fields>
        <fullName>Account_Role__c</fullName>
        <label>Account Role</label>
        <picklist>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restocking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Channel_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Plan</label>
        <referenceTo>SFDC_Channel_Account_Plan__c</referenceTo>
        <relationshipName>R00No0000000pcBwEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Team</relationshipLabel>
        <relationshipName>R00No0000000pcBeEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Channel Team</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Channel Team Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>